samples/_failures_safe/1761075702_b80a0b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_35898f0b.c: In function ‘find_shortest_path’:
./samples/SAFE/__tmp_35898f0b.c:158:12: error: missing terminating " character
  158 |     printf("Shortest path from %s to %s: distance
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_35898f0b.c:158:5: error: expected expression at end of input
  158 |     printf("Shortest path from %s to %s: distance
      |     ^~~~~~
./samples/SAFE/__tmp_35898f0b.c:158:5: error: expected declaration or statement at end of input
